# SFML-Graph-Plotter

./: .clangd  .gitignore  CMakeLists.txt  SFML-Graph-Plotter.hpp.in  TODO.md  main.cpp  makefile  readme.md
.github/workflows/: CI.yml  build.yml  release.yml
include/: entity.hpp  grid.hpp
src/: grid.cpp
